# CalculoNumerico

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ajustes.html  bases.html  calcnum_matrix.html  disclaimer.html  edos.html  genindex.html  index.html  integracoes.html  interpolacoes.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  raizes.html  requirements.txt  search.html  searchindex.js  sistemas.html  tests_unitarios.html  tutorial_calcnum.html
.doctrees/: ajustes.doctree  bases.doctree  calcnum_matrix.doctree  disclaimer.doctree  edos.doctree  environment.pickle  index.doctree  integracoes.doctree  interpolacoes.doctree  modules.doctree  raizes.doctree  sistemas.doctree  tests_unitarios.doctree  tutorial_calcnum.doctree
_modules/: index.html
_sources/: ajustes.rst.txt  bases.rst.txt  edos.rst.txt  integracoes.rst.txt  raizes.rst.txt  tests_unitarios.rst.txt  tutorial_calcnum.rst.txt
codigos/: EDOs.py  __init__.py  ajustecurvas.py  ajustecurvasOrdemn.py  ajustecurvasv2.py  algorimosA1.py  bases.py  calcnum.py  constants.py  edos.py  integracoes.py  interpolacoes.py  log_resultados.txt  raizes.py  requirements.txt  sistemaslineares.py
docs/: EDOs.rst  Makefile  ajustes.rst  bases.rst  calcnum_matrix.rst  conf.py  disclaimer.rst  edos.rst  index.rst  integracoes.rst  interpolacoes.rst  modules.rst  raizes.rst  requirements.txt  sistemas.rst
notebooks/: sistemaslineares.ipynb  sistemaslineares_av1.ipynb  sistemaslineares_avaliativo.ipynb  sistemaslineares_teste.ipynb
tests/: test_ajustecurvas.html  test_ajustecurvas.py  test_ajustecurvas_v2.py  test_ajustes.py  test_bases.html  test_bases.py  test_edos.html  test_edos.py  test_edos_extra.py  test_inputs_calcnum.html  test_raizes.html  (+9 more)
(+49 files in other folders)
