[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculo-numerico"
version = "0.1.0"
description = "Repositório de Códigos da Disciplina de Cálculo Numérico"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pedro", email = "pedro@example.com"},  # Adjust as needed
]
maintainers = [
    {name = "Pedro", email = "pedro@example.com"},
]
keywords = ["calculo", "numerico", "matematica", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "sympy>=1.10.0",
    "pandas>=1.3.0",
    "mpmath>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/pedroiff0/CalculoNumerico"
Documentation = "https://pedroiff0.github.io/CalculoNumerico/"
Repository = "https://github.com/pedroiff0/CalculoNumerico.git"
Issues = "https://github.com/pedroiff0/CalculoNumerico/issues"

[project.scripts]
calcnum = "codigos.calcnum:main"

[tool.setuptools]
packages = ["codigos"]
include-package-data = true

[tool.setuptools.package-data]
codigos = ["*.txt"]  # Include input files if needed